{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 70,
  "lineage": "c6826bf2-15a9-3166-3e61-389d715cbbee",
  "resources": [
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/zones/asia-south1-c/instanceGroups/serverpod-production-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-03-29T12:07:37.323-07:00",
            "enable_cdn": false,
            "fingerprint": "B6gbGxZsTrw=",
            "generated_id": 7847659689665539990,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/healthChecks/serverpod-production-health-check"
            ],
            "id": "projects/portfolio-server-418713/global/backendServices/serverpod-production-backend-api",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-backend-api",
            "port_name": "api",
            "project": "portfolio-server-418713",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/backendServices/serverpod-production-backend-api",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "insights",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/zones/asia-south1-c/instanceGroups/serverpod-production-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-03-29T12:07:38.331-07:00",
            "enable_cdn": false,
            "fingerprint": "1s22jlDhh-s=",
            "generated_id": 5584869041784926101,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/healthChecks/serverpod-production-health-check"
            ],
            "id": "projects/portfolio-server-418713/global/backendServices/serverpod-production-backend-insights",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-backend-insights",
            "port_name": "insights",
            "project": "portfolio-server-418713",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/backendServices/serverpod-production-backend-insights",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/zones/asia-south1-c/instanceGroups/serverpod-production-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-03-29T12:07:41.205-07:00",
            "enable_cdn": true,
            "fingerprint": "JJiwWcxBdoA=",
            "generated_id": 2819665162706530194,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/healthChecks/serverpod-production-health-check"
            ],
            "id": "projects/portfolio-server-418713/global/backendServices/serverpod-production-backend-web",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-backend-web",
            "port_name": "web",
            "project": "portfolio-server-418713",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/backendServices/serverpod-production-backend-web",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "serverpod-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080-8082"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-03-29T11:48:35.755-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/portfolio-server-418713/global/firewalls/serverpod-production-instance",
            "log_config": [],
            "name": "serverpod-production-instance",
            "network": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/networks/serverpod-production-network",
            "priority": 1000,
            "project": "portfolio-server-418713",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/firewalls/serverpod-production-instance",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "serverpod-production-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "serverpod-instance-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-03-29T11:48:36.950-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/portfolio-server-418713/global/firewalls/serverpod-production-instance-ssh",
            "log_config": [],
            "name": "serverpod-production-instance-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/networks/serverpod-production-network",
            "priority": 1000,
            "project": "portfolio-server-418713",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/firewalls/serverpod-production-instance-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "serverpod-production-instance-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.109.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-03-29T11:48:36.676-07:00",
            "id": "projects/portfolio-server-418713/global/addresses/serverpod-production-private-ip",
            "name": "serverpod-production-private-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/networks/serverpod-production-network",
            "prefix_length": 16,
            "project": "portfolio-server-418713",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/addresses/serverpod-production-private-ip"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/portfolio-server-418713/global/forwardingRules/serverpod-production-api",
            "ip_address": "34.49.29.54",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-api",
            "port_range": "443",
            "project": "portfolio-server-418713",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/forwardingRules/serverpod-production-api",
            "target": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/targetHttpsProxies/serverpod-production-proxy-api"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.api",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_target_https_proxy.api",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "insights",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/portfolio-server-418713/global/forwardingRules/serverpod-production-insights",
            "ip_address": "34.36.66.184",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-insights",
            "port_range": "443",
            "project": "portfolio-server-418713",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/forwardingRules/serverpod-production-insights",
            "target": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/targetHttpsProxies/serverpod-production-proxy-insights"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.insights",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_target_https_proxy.insights",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/portfolio-server-418713/global/forwardingRules/serverpod-production-storage",
            "ip_address": "34.102.179.101",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-storage",
            "port_range": "443",
            "project": "portfolio-server-418713",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/forwardingRules/serverpod-production-storage",
            "target": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/targetHttpsProxies/serverpod-production-proxy-storage"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.storage",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_target_https_proxy.storage",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/portfolio-server-418713/global/forwardingRules/serverpod-production-web",
            "ip_address": "34.117.60.139",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-web",
            "port_range": "443",
            "project": "portfolio-server-418713",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/forwardingRules/serverpod-production-web",
            "target": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/targetHttpsProxies/serverpod-production-proxy-web"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.web",
            "module.serverpod_production.google_compute_managed_ssl_certificate.web-top-domain",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_target_https_proxy.web",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "serverpod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/portfolio-server-418713/global/networks/serverpod-production-network",
            "mtu": 0,
            "name": "serverpod-production-network",
            "project": "portfolio-server-418713",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/networks/serverpod-production-network"
          }
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-29T12:26:09.947-07:00",
            "id": "projects/portfolio-server-418713/global/targetHttpsProxies/serverpod-production-proxy-api",
            "name": "serverpod-production-proxy-api",
            "project": "portfolio-server-418713",
            "proxy_bind": false,
            "proxy_id": 3092677627914922814,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/targetHttpsProxies/serverpod-production-proxy-api",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/sslCertificates/serverpod-production-api-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/urlMaps/serverpod-production-balancer"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.api",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "insights",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-29T12:26:09.838-07:00",
            "id": "projects/portfolio-server-418713/global/targetHttpsProxies/serverpod-production-proxy-insights",
            "name": "serverpod-production-proxy-insights",
            "project": "portfolio-server-418713",
            "proxy_bind": false,
            "proxy_id": 9048283003732273982,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/targetHttpsProxies/serverpod-production-proxy-insights",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/sslCertificates/serverpod-production-insights-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/urlMaps/serverpod-production-balancer"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.insights",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-29T12:26:10.052-07:00",
            "id": "projects/portfolio-server-418713/global/targetHttpsProxies/serverpod-production-proxy-storage",
            "name": "serverpod-production-proxy-storage",
            "project": "portfolio-server-418713",
            "proxy_bind": false,
            "proxy_id": 8896130420017113917,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/targetHttpsProxies/serverpod-production-proxy-storage",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/sslCertificates/serverpod-production-storage-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/urlMaps/serverpod-production-balancer"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.storage",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-29T12:26:10.926-07:00",
            "id": "projects/portfolio-server-418713/global/targetHttpsProxies/serverpod-production-proxy-web",
            "name": "serverpod-production-proxy-web",
            "project": "portfolio-server-418713",
            "proxy_bind": false,
            "proxy_id": 5206123179057785661,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/targetHttpsProxies/serverpod-production-proxy-web",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/sslCertificates/serverpod-production-web-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/urlMaps/serverpod-production-balancer"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.web",
            "module.serverpod_production.google_compute_managed_ssl_certificate.web-top-domain",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "serverpod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-29T12:25:55.082-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/backendServices/serverpod-production-backend-web",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "CzKDxYoBD1s=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "api.oyus.me"
                ],
                "path_matcher": "api"
              },
              {
                "description": "",
                "hosts": [
                  "insights.oyus.me"
                ],
                "path_matcher": "insights"
              },
              {
                "description": "",
                "hosts": [
                  "storage.oyus.me"
                ],
                "path_matcher": "storage"
              }
            ],
            "id": "projects/portfolio-server-418713/global/urlMaps/serverpod-production-balancer",
            "map_id": 7528943068711136044,
            "name": "serverpod-production-balancer",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/backendServices/serverpod-production-backend-api",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "api",
                "path_rule": [],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/backendServices/serverpod-production-backend-insights",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "insights",
                "path_rule": [],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/backendBuckets/serverpod-production-backend-storage",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "storage",
                "path_rule": [],
                "route_rules": []
              }
            ],
            "project": "portfolio-server-418713",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-server-418713/global/urlMaps/serverpod-production-balancer",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    }
  ]
}